Start query language and add REPL

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ dev = [
     "mypy>=1.0",
 ]
 
+[project.scripts]
+tt-dump = "typed_tables.dump:main"
+ttq = "typed_tables.repl:main"
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
