Add support for VS Code snippets and code folding

--- a/vscode-ttq/package.json
+++ b/vscode-ttq/package.json
@@ -30,6 +30,12 @@
         "scopeName": "source.ttq",
         "path": "./syntaxes/ttq.tmLanguage.json"
       }
+    ],
+    "snippets": [
+      {
+        "language": "ttq",
+        "path": "./snippets/ttq.json"
+      }
     ]
   }
 }
