--- a/vscode-ttq/language-configuration.json
+++ b/vscode-ttq/language-configuration.json
@@ -24,5 +24,11 @@
   "indentationRules": {
     "increaseIndentPattern": "\\{\\s*$",
     "decreaseIndentPattern": "^\\s*\\}"
+  },
+  "folding": {
+    "markers": {
+      "start": "^\\s*--\\s*#?region\\b",
+      "end": "^\\s*--\\s*#?endregion\\b"
+    }
   }
 }
